@@ -25,8 +25,8 @@
 	    <tr><td><a href="codestriker.html">Manual</a></td></tr>
 	    <tr><td><a href="contact.html">Contact Us</a></td></tr>
 	    <tr><td><a href="team.html">The Team</a></td></tr>
-	    <tr><td><a href="resources.html">Code Review Resources</a></td></tr>
 	    <tr><td class="selected_section_link">History</td></tr>
+	    <tr><td><a href="resources.html">Resources</a></td></tr>
 	    <tr><td><a href="http://sourceforge.net/tracker/?atid=429863&amp;group_id=41136&amp;func=browse">Request Feature</a></td></tr>
 	    <tr><td><a href="http://sourceforge.net/tracker/?func=browse&amp;group_id=41136&amp;atid=429860">Report Bug</a></td></tr>
 	    <tr><td><a href="http://www.sourceforge.net/projects/codestriker">Project Page</a></td></tr>
@@ -108,6 +108,11 @@
 		  including the use of a database for persistence, and
 		  Codestriker eventually became the modularised Perl
 		  web application that it is today.
+		</p>
+		<p>
+		  The last few releases of Codestriker have made it
+		  acceptable for use in both light-weight review
+		  processes, and for formal inspection processes.
 		</p>
 	      </td>
 	    </tr>
