@@ -25,8 +25,8 @@
 	    <tr><td><a href="codestriker.html">Manual</a></td></tr>
 	    <tr><td><a href="contact.html">Contact Us</a></td></tr>
 	    <tr><td><a href="team.html">The Team</a></td></tr>
-	    <tr><td><a href="resources.html">Code Review Resources</a></td></tr>
 	    <tr><td><a href="history.html">History</a></td></tr>
+	    <tr><td><a href="resources.html">Resources</a></td></tr>
 	    <tr><td><a href="http://sourceforge.net/tracker/?atid=429863&amp;group_id=41136&amp;func=browse">Request Feature</a></td></tr>
 	    <tr><td><a href="http://sourceforge.net/tracker/?func=browse&amp;group_id=41136&amp;atid=429860">Report Bug</a></td></tr>
 	    <tr><td><a href="http://www.sourceforge.net/projects/codestriker">Project Page</a></td></tr>
