@@ -52,6 +52,23 @@ sub topic_changed {
     return $returnValue;
 }
 
+sub topic_viewed {
+    _create_listeners();
+    
+    # Call all of the topic listeners that are created. If any of the
+    # topic listeners return a non-empty string, it is treated as a 
+    # request to reject the requested state change, and display the 
+    # returned string as the user error message.
+    my $returnValue = '';
+    
+    foreach my $listener (@topic_listeners) {
+       $returnValue .= $listener->topic_viewed(@_);
+       last if length($returnValue);
+    }
+    
+    return $returnValue;
+}
+
 sub comment_create {
     _create_listeners();
     
